redis connection string command

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     },
     "Redis": {
-      "ConnectionString": ""
+      "ConnectionString": "redis connection string"
     }
   }
 }
